--- a/app/components/home-module/home-module.scss
+++ b/app/components/home-module/home-module.scss
@@ -1,12 +1,17 @@
 div {
-    padding: 24px;
+
     h1 {
-        font-size: min(16vw, 256px);
-        font-weight:900;
+        font-size: min(16vw, 320px);
+        font-weight: 900;
     }
+
     h2 {
-        width: 50vw;
-        font-size: min(3vw, 56px);
+        font-size: min(8vw, 96px);
+        font-weight: 700;
+    }
+
+    p {
+        font-size: min(4vw, 24px);
         line-height: 95%;
         text-wrap: balance;
     }
