--- a/app/components/home-module/home-module.scss
+++ b/app/components/home-module/home-module.scss
@@ -1,18 +1,20 @@
-div {
-
+.home-module {
     h1 {
-        font-size: min(16vw, 320px);
+        font-size: min(14vw, 320px);
         font-weight: 900;
+        opacity: 0%;
     }
 
     h2 {
-        font-size: min(8vw, 96px);
+        font-size: min(7vw, 96px);
         font-weight: 700;
+        opacity: 0%;
     }
 
     p {
         font-size: min(4vw, 24px);
         line-height: 95%;
         text-wrap: balance;
+        opacity: 0%;
     }
 }
