--- a/app/globals.css
+++ b/app/globals.css
@@ -2,9 +2,28 @@
 @tailwind components;
 @tailwind utilities;
 
+body {
+    background-color: white;
+}
+
 .horizontal-line {
     width: 95%;  
     height: 1px; 
     background-color: black;  
     opacity: 20%;
+}
+
+.rect-btn {
+    position: relative;
+    color: black;
+    border: 1px solid black;
+    padding: 8px 48px;
+    cursor: pointer;
+    z-index: 10;
+    background-color: white;
+}
+
+.custom-cursor {
+    mix-blend-mode: difference;
+    background-color: white;
 }
