--- a/app/globals.css
+++ b/app/globals.css
@@ -2,37 +2,46 @@
 @tailwind components;
 @tailwind utilities;
 
+html {
+  overflow-y: scroll;
+  height: 100%;
+  -webkit-overflow-scrolling: touch;
+  overflow-scrolling: touch;
+}
 body {
-    background-color: white;
+  background-color: white;
+  overflow-y: visible;
+  position: relative;
+  overflow-x: hidden;
 }
 
 .horizontal-line {
-    width: 95%;  
-    height: 1px; 
-    background-color: black;  
-    opacity: 20%;
+  width: 95%;
+  height: 1px;
+  background-color: black;
+  opacity: 20%;
 }
 
 .rect-btn {
-    position: relative;
-    color: black;
-    border: 1px solid black;
-    padding: 8px 48px;
-    cursor: pointer;
-    z-index: 10;
-    background-color: white;
+  position: relative;
+  color: black;
+  border: 1px solid black;
+  padding: 8px 48px;
+  cursor: pointer;
+  z-index: 10;
+  background-color: white;
 }
 
 .custom-cursor {
-    mix-blend-mode: difference;
-    background-color: white;
+  mix-blend-mode: difference;
+  background-color: white;
 }
 
 nav {
-    transition: transform 0.3s cubic-bezier(0.86,0,0.07,1);
-    transform: translateY(0);
+  transition: transform 0.3s cubic-bezier(0.86, 0, 0.07, 1);
+  transform: translateY(0);
 }
 
 .translate-y-navbar {
-    transform: translateY(-100%)
+  transform: translateY(-100%);
 }
