--- a/app/components/service-module/service-module.scss
+++ b/app/components/service-module/service-module.scss
@@ -7,10 +7,12 @@
     section {
         h2, h3 {
             font-size: min(6vw, 48px);
+            text-wrap: balance;
         }
 
         p {
-            font-size: min(5vw, 32px);
+            font-size: min(5vw, 20px);
+            text-wrap: balance;
         }
     }
 }
