--- a/app/components/about-us-module/about-us-module.scss
+++ b/app/components/about-us-module/about-us-module.scss
@@ -3,10 +3,24 @@ h1 {
 }
 
   p {
-    font-size: clamp(2ex, 3vw , 28px);
+    font-size: clamp(2ex, 2vw , 28px);
     
   }
 
-  path {
+  .color-path {
     opacity: 30%;
   }
+
+.values-component {
+  section {
+    h2, h3 {
+        font-size: min(6vw, 48px);
+        text-wrap: balance;
+    }
+    
+    p {
+        font-size: min(5vw, 20px);
+        text-wrap: balance;
+    }
+}
+}
