--- a/app/components/products-module/products-module.scss
+++ b/app/components/products-module/products-module.scss
@@ -1,16 +1,17 @@
 .section-family {
     h1 {
-        font-size: min(12vw, 120px);
+        font-size: clamp(48px, 8vw, 120px);
         line-height: 95%;
     }
 
     h2 {
-        font-size: min(4vw, 32px);
+        font-size: clamp(16px, 1.5vw, 28px);
         text-wrap: balance;
-        line-height: 200%;
+        line-height: 95%;
     }
 
     p {
-        font-size: min(5vw, 18px);
+        font-size: clamp(16px, 1vw, 28px);
+        text-wrap: balance;
     }
 }
