--- a/app/components/statistics-module/home-statistics.scss
+++ b/app/components/statistics-module/home-statistics.scss
@@ -1,21 +1,23 @@
 .statistics-component {
   h1 {
+    line-height: 95%;
+  }
+
+  h1, h3 {
         font-size: min(8vw, 64px);
-        line-height: 95%;
         width: min(90vw, 800px);
         text-wrap: balance;
   }
 
   p{
-    font-size: min(5vw, 28px);
+    font-size: clamp(16px, 1.5vw, 28px);
     font-weight: 400;
     width: min(80%, 600px);
     text-wrap: balance;
   }
 
   span {
-    font-size: min(3vw, 28px);
-    text-wrap: balance;
+    font-size: clamp(16px, 1vw, 28px);
     font-weight: 200;
   }
 
