--- a/app/components/parallax-module/parallax-module.scss
+++ b/app/components/parallax-module/parallax-module.scss
@@ -1,6 +1,6 @@
 .wrapper {
     height: 175vh;
-    background-color: #1e1415;
+    background-color: #1E2124;
     display: flex;
     flex-direction: row;
     gap: 2vw;
