changed text selection color

--- a/app/globals.css
+++ b/app/globals.css
@@ -46,35 +46,41 @@ nav {
   transform: translateY(-100%);
 }
 
-/* The track of the scrollbar */
 ::-webkit-scrollbar {
-    width: 12px; /* Width of the vertical scrollbar */
-    height: 12px; /* Height of the horizontal scrollbar */
+    width: 12px; 
+    height: 12px; 
 }
 
-/* The handle (thumb) of the scrollbar */
 ::-webkit-scrollbar-thumb {
     background-color: #1E2124;
-    border-radius: 0; /* This makes it square */
+    border-radius: 0; 
 }
 
-/* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
     background-color: #555;
 }
 
-/* The track part of scrollbar */
 ::-webkit-scrollbar-track {
     background-color: #f1f1f1;
 }
 
-/* The corner where both scrollbars meet */
 ::-webkit-scrollbar-corner {
     background-color: transparent;
 }
 
-/* This is for Firefox */
 * {
     scrollbar-width: thin;
     scrollbar-color: black #f1f1f1;
+}
+
+
+/* text selection color */
+::selection {
+    background-color: rgba(156, 27, 49, 0.7);
+    color: white;
+}
+
+::-moz-selection {
+    background-color: rgba(156, 27, 49, 0.7);
+    color: white;
 }
